// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaUpload 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer default"
>
  <img
    class="thumbnail"
    src="sulu-400x400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="fa-cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
        <div
          class="uploadInfoText"
        >
          Upload media
        </div>
      </div>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaUpload with a different image size 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer default"
>
  <img
    class="thumbnail"
    src="sulu-400x400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="fa-cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
        <div
          class="uploadInfoText"
        >
          Upload media
        </div>
      </div>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaUpload with the round skin 1`] = `
<div
  aria-disabled="false"
  class="mediaContainer round"
>
  <img
    class="thumbnail"
    src="sulu-400x400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="fa-cloud-upload"
          class="uploadIcon fa fa-cloud-upload"
        />
        <div
          class="uploadInfoText"
        >
          Upload media
        </div>
      </div>
    </div>
  </div>
  <input
    autocomplete="off"
    style="display:none"
    type="file"
  />
</div>
`;
